logs_obj.txt
include/run.cpp:7:24: error: 'vector' does not name a type
    7 |     int analizar(const vector<string>& lines,vector<struct sub_str>& output,vector<struct Vars> stack){
      |                        ^~~~~~
include/run.cpp:7:30: error: expected ',' or '...' before '<' token
    7 |     int analizar(const vector<string>& lines,vector<struct sub_str>& output,vector<struct Vars> stack){
      |                              ^
include/run.cpp: In function 'int analizar(int)':
include/run.cpp:9:27: error: 'lines' was not declared in this scope; did you mean 'line'?
    9 |         for (string line: lines){
      |                           ^~~~~
      |                           line
include/run.cpp:15:21: error: 'output' was not declared in this scope
   15 |                     output.push_back({line.substr(i,end),STRING,NULL});//Ingresamos
      |                     ^~~~~~
include/run.cpp:35:21: error: 'output' was not declared in this scope
   35 |                     output.push_back({name_vars,VAR,NULL});
      |                     ^~~~~~
include/run.cpp:41:21: error: 'output' was not declared in this scope
   41 |                     output.push_back({"\0",INT,NULL});
      |                     ^~~~~~
include/run.cpp: At global scope:
include/run.cpp:52:13: error: 'vector' was not declared in this scope
   52 |     int run(vector<struct sub_str> definiciones){
      |             ^~~~~~
include/run.cpp:6:1: note: 'std::vector' is defined in header '<vector>'; did you forget to '#include <vector>'?
    5 |     #include "./head/str.h"
  +++ |+#include <vector>
    6 |     using namespace std;
include/run.cpp:52:20: error: expected primary-expression before 'struct'
   52 |     int run(vector<struct sub_str> definiciones){
      |                    ^~~~~~
